# oasis-cognition

./: .env.example  .gitignore  AGENT_GUIDELINES.md  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
apps/api-gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/cu-overlay/: index.html  main.js  package-lock.json  package.json
apps/mobile-relay/: package-lock.json  package.json  tsconfig.json
apps/oasis-mobile/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/oasis-ui-react/: .npmrc  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
config/livekit/: livekit.yaml
docs/: GoT_Alt_Implementation.md  IMPROVE_PLEXIBILITY.md  README.md  SAD.md  code-indexing-service-design.md
docs/architecture/: overview.md
docs/guides/: getting-started.md  what-makes-oasis-different.md
extensions/oasis-chrome-bridge/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
scripts/: install-transcription-service.sh  npm-install-all.sh  setup.sh  start-dev-agent.sh  start-diarization.sh  start-gipformer.sh  start-transcription.sh  start-ui-parser.sh  test-interaction.sh
services/artifact_service/: Dockerfile  embeddings.py  extractors.py  gipformer.py  main.py  requirements.txt  (+4 more)
tests/: conftest.py  test_api.py  test_event_bus.py  test_graph_builder.py  test_llm_client.py  test_logic_engine.py  test_memory_service.py  test_reasoning_schema.py
(+207 files in other folders)
